[workspace]
workspace.resolver = "2"

members = [
  "orm",
  "query-builder",
  "query-builder-macros",
  "migrator",
  "migrator-macros",
  "migrator-tests",
  "proc-macros-helpers",
  "derive",
  "models",
  "orm-tests",
  "orm-compile-tests",
  "examples/migration-filebased",
  "examples/migration-embedded",
  "examples/migration-cli",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Oyelowo Oyedayo"]
description = "One codebase to rule them all"
documentation = "https://codebreather.com/oyelowo"


[workspace.dependencies]
surreal-derive = { path = "derive" }
surreal-orm = { path = "orm" }
surreal-query-builder = { path = "query-builder" }
proc-macros-helpers = { path = "proc-macros-helpers" }
query-builder-macros = { path = "query-builder-macros" }
migrator = { path = "migrator" }
migrator-macros = { path = "migrator-macros" }
migrator-tests = { path = "migrator-tests" }
surreal-models = { path = "models" }
migration-filebased = { path = "examples/migration-filebased" }
migration-embedded = { path = "examples/migration-embedded" }
migration-cli = { path = "examples/migration-cli" }

surrealdb = { version = "1.0.2", features = [
  "protocol-ws",
  "protocol-http",
  "kv-mem",
  # "kv-indxdb",
  "kv-rocksdb",
  # "kv-tikv", 
  # "kv-fdb",
  "rustls",
  "native-tls",
  "http",
  "scripting",
] }


# Macros metapogramming lib
syn = "2.0.38"
quote = "1.0.33"
darling = "0.20.3"
proc-macro2 = "1.0.69"
proc-macro-crate = "3.0.0"
proc-macro2-diagnostics = "0.10.1"
nom = "7.1.3"
convert_case = "0.6.0"
strum = "0.25.0"
strum_macros = "0.25.3"
num-traits = "0.2.17"
regex = "1.10.2"
derive_builder = "0.12.0"
geojson = "0.24.1"
fake = "2.8.0"
paste = "1.0.14"
chrono = { version = "0.4.31", features = ["serde"] }
chrono-tz = "0.8.3"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde-aux = "4.2.0"
async-trait = "0.1.74"
thiserror = "1.0.50"
uuid = "1.5.0"
tokio = { version = "1.33.0", features = ["full"] }
sha2 = "0.10.8"
typed-builder = "0.18.0"
rand = "0.8.5"
clap = { version = "4.4.7", features = ["derive"] }
tempfile = "3.8.1"
log = "0.4"
pretty_env_logger = "0.5.0"
geo = { version = "0.27.0", features = ["use-serde"] }
glob = "0.3.1"

inquire = "0.6.2"
insta = { version = "1.34.0", features = ["glob"] }
pretty_assertions = "1.4.0"
static_assertions = "1.1.0"
tokio-test = "0.4.3"
test-case = "3.3.1"
