[workspace]
workspace.resolver = "2"

members = [
  "orm",
  "query-builder",
  "query-builder-macros",
  "migrator",
  "migrator-macros",
  "migrator-tests",
  "proc-macros-helpers",
  "derive",
  "derive_tests",
  "models",
  "orm-tests",
  "orm-compile-tests",
  "examples/migration-filebased",
  "examples/migration-embedded",
  "examples/migration-cli", "derive_tests",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Oyelowo Oyedayo"]
description = "One codebase to rule them all"
documentation = "https://codebreather.com/oyelowo"


[workspace.dependencies]
surreal-derive = { path = "derive" }
surreal-orm = { path = "orm" }
surreal-query-builder = { path = "query-builder" }
proc-macros-helpers = { path = "proc-macros-helpers" }
query-builder-macros = { path = "query-builder-macros" }
migrator = { path = "migrator" }
migrator-macros = { path = "migrator-macros" }
migrator-tests = { path = "migrator-tests" }
surreal-models = { path = "models" }
migration-filebased = { path = "examples/migration-filebased" }
migration-embedded = { path = "examples/migration-embedded" }
migration-cli = { path = "examples/migration-cli" }
migration-simple = { path = "examples/migration-simple" }

surrealdb = { version = "1.5.3", features = [
  "protocol-ws",
  "protocol-http",
  "kv-mem",
  # "kv-indxdb",
  "kv-rocksdb",
  # "kv-tikv", 
  # "kv-fdb",
  "rustls",
  "native-tls",
  "http",
  "scripting",
] }


# Macros metapogramming lib
syn = "2.0.69"
quote = "1.0.36"
darling = "0.20.9"
proc-macro2 = "1.0.86"
proc-macro-crate = "3.1.0"
proc-macro2-diagnostics = "0.10.1"
nom = "7.1.3"
convert_case = "0.6.0"
strum = "0.26.3"
strum_macros = "0.26.4"
num-traits = "0.2.19"
regex = "1.10.5"
derive_builder = "0.20.0"
itertools = "0.13.0"
geojson = "0.24.1"
fake = "2.9.2"
paste = "1.0.15"
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.9.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde-aux = "4.5.0"
async-trait = "0.1.81"
thiserror = "1.0.61"
uuid = "1.9.1"
tokio = { version = "1.38.0", features = ["full"] }
sha2 = "0.10.8"
typed-builder = "0.18.2"
rand = "0.8.5"
clap = { version = "4.5.8", features = ["derive"] }
tempfile = "3.10.1"
log = "0.4"
pretty_env_logger = "0.5.0"
geo = { version = "0.28.0", features = ["use-serde"] }
glob = "0.3.1"

inquire = "0.7.5"
insta = { version = "1.39.0", features = ["glob"] }
pretty_assertions = "1.4.0"
static_assertions = "1.1.0"
tokio-test = "0.4.4"
test-case = "3.3.1"
