[workspace]
resolver = "2"

members = [
  "orm",
  "query-builder",
  "query-builder-macros",
  "migrator",
  "migrator-macros",
  "migrator-tests",
  "proc-macros-helpers",
  "derive",
  "derive_helpers",
  "derive_tests",
  "models",
  "orm-tests",
  "orm-compile-tests",
  "examples/migration-filebased",
  "examples/migration-embedded",
  "examples/migration-cli", "derive_tests",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Oyelowo Oyedayo"]
description = "One codebase to rule them all"
documentation = "https://codebreather.com/oyelowo"


[workspace.dependencies]
surreal-derive = { path = "derive" }
surreal-derive-helpers = { path = "derive_helpers" }
surreal_orm = { path = "orm" }
surreal-query-builder = { path = "query-builder" }
proc-macros-helpers = { path = "proc-macros-helpers" }
query-builder-macros = { path = "query-builder-macros" }
migrator = { path = "migrator" }
migrator-macros = { path = "migrator-macros" }
migrator-tests = { path = "migrator-tests" }
surreal-models = { path = "models" }
migration-filebased = { path = "examples/migration-filebased" }
migration-embedded = { path = "examples/migration-embedded" }
migration-cli = { path = "examples/migration-cli" }
migration-simple = { path = "examples/migration-simple" }

surrealdb = { version = "1.5.6", features = [
  "protocol-ws",
  "protocol-http",
  "kv-mem",
  # "kv-indxdb",
  "kv-rocksdb",
  # "kv-tikv", 
  # "kv-fdb",
  "rustls",
  "native-tls",
  "http",
  "scripting",
] }


# Macros metapogramming lib
syn = { version = "2.0.96", features = ["full","extra-traits", "fold", "test" ,"visit", "visit-mut"] }
quote = "1.0.38"
darling = "0.20.10"
proc-macro2 = "1.0.93"
proc-macro-crate = "3.2.0"
proc-macro2-diagnostics = "0.10.1"
nom = "7.1.3"
convert_case = "0.7.1"
strum = "0.26.3"
strum_macros = "0.26.4"
num-traits = "0.2.19"
regex = "1.11.1"
derive_builder = "0.20.2"
itertools = "0.14.0"
geojson = "0.24.1"
fake = "3.1.0"
paste = "1.0.15"
chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = "0.10.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.136"
serde-aux = "4.5.0"
async-trait = "0.1.85"
thiserror = "2.0.11"
uuid = "1.12.0"
tokio = { version = "1.43.0", features = ["full"] }
sha2 = "0.10.8"
typed-builder = "0.20.0"
rand = "0.8.5"
clap = { version = "4.5.26", features = ["derive"] }
tempfile = "3.15.0"
log = "0.4"
pretty_env_logger = "0.5.0"
geo = { version = "0.29.3", features = ["use-serde"] }
glob = "0.3.2"

inquire = "0.7.5"
insta = { version = "1.42.0", features = ["glob"] }
pretty_assertions = "1.4.1"
static_assertions = "1.1.0"
tokio-test = "0.4.4"
test-case = "3.3.1"
rstest = "0.24.0"
