[package]
name = "migrator-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
surrealdb = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
nom = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
inquire = { workspace = true }
paste = { workspace = true }
clap = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
migrator = { workspace = true }
