[package]
name = "migrator-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { workspace = true }
proc-macro-crate = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
serde = { workspace = true }

surreal-query-builder = { workspace = true }
migrator = { workspace = true }

[lib]
proc-macro = true
doctest = false
