[package]
name = "migrator-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surreal-orm = { workspace = true }
surreal-models = { workspace = true }
surrealdb = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tempfile = { workspace = true }
insta = { workspace = true }
pretty_env_logger = { workspace = true }
typed-builder = { workspace = true }
chrono = { workspace = true }


[dev-dependencies]
test-case = { workspace = true }
