[package]
name = "migrator"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surreal-orm = { workspace = true }
surrealdb = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
nom = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
inquire = { workspace = true }
