[package]
name = "surreal_orm-compile-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surreal_orm = { workspace = true }
surreal-models = { workspace = true }
surrealdb = { workspace = true }
serde = { workspace = true }
