[package]
name = "surreal_orm-tests"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surreal_orm = { workspace = true }
surreal-models = { workspace = true }
surrealdb = { workspace = true }
pretty_assertions = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
geo = { workspace = true }
insta = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }

[lib]
doctest = false
