[package]
name = "surreal_orm"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surreal-derive = { workspace = true }
query-builder-macros = { workspace = true }
migrator-macros = { workspace = true }
surreal-query-builder = { workspace = true }
migrator = { workspace = true }
serde = { workspace = true }

[lib]
doctest = false
