[package]
name = "surreal-query-builder"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealdb = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
geo = { workspace = true }
regex = { workspace = true }
async-trait = { workspace = true }
paste = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
static_assertions = { workspace = true }
num-traits = { workspace = true }
insta = { workspace = true }
nom = { workspace = true }
pretty_assertions = { workspace = true }
typed-builder = { workspace = true }

[lib]
doctest = true
