[workspace]

members = [
  # "app-graphql-surrealdb",
  # "app-grpc-surrealdb",
  # "lib-scripts",
  # "lib-common",
  # "lib-my-macros",
  # "lib-my-macros/derive",
  "surrealdb-orm",
  "surrealdb-query-builder",
  "surrealdb-derive",
  "surrealdb-models",
  "surrealdb-orm-tests",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Oyelowo Oyedayo"]
description = "One codebase to rule them all"
documentation = "https://codebreather.com/oyelowo"


[workspace.dependencies]
# lib-common = { path = "./lib-common" }
# lib-my-macros = { path = "./lib-my-macros" }
surrealdb-derive = { path = "./surrealdb-derive" }
surrealdb-orm = { path = "./surrealdb-orm" }
surrealdb-query-builder = { path = "./surrealdb-query-builder" }
surrealdb-models = { path = "./surrealdb-models" }
surrealdb-orm-tests = { path = "./surrealdb-orm-tests" }

surrealdb = { git = "https://github.com/surrealdb/surrealdb", branch = "main", features = [
  "protocol-ws",
  "protocol-http",
  "kv-mem",
  # "kv-indxdb",
  # "kv-rocksdb",
  # "kv-tikv", 
  # "kv-fdb",
  "rustls",
  "native-tls",
  "http",
  "scripting",
] }
poem = { version = "1.3.50", features = [
  "redis-session",
  "session",
  "websocket",
  "prometheus",
  "multipart",
  "cookie",
  "compression",
  "sse",
  "i18n",
  "test",
  "anyhow",
  # "eyre",
  "tokio-metrics",
  "opentelemetry",
  "opentelemetry-http",
] }
poem-openapi = { version = "2.0", features = ["swagger-ui"] }

async-graphql = { version = "5.0.2", features = [
  "apollo_tracing",
  "apollo_persisted_queries",
  "bson",
  "dataloader",
  "chrono",
  "chrono-tz",
  "log",
  "dataloader",
  "tracing",
  "opentelemetry",
  "unblock",
  "url",
  "uuid",
  "string_number",
  "secrecy",
  "decimal",
  "smol_str",
] }

async-graphql-poem = "5.0.2"
futures = "0.3.26"
futures-util = "0.3.26"
tokio = { version = "1.22.0", features = ["full"] }
redis = { version = "0.22.1", features = [
  "tokio-comp",
  "tokio-native-tls-comp",
] }
oauth2 = "4.3.0"
reqwest = { version = "0.11.13", default-features = false, features = [
  "rustls-tls",
] }
prost = "0.11.2"
hyper = "0.14.23"
http = "0.2.8"
http-body = "0.4.5"
futures-core = "0.3.25"
async-trait = "0.1.58"
config = "0.13.2"
crossbeam = "0.8.2"
derive_more = "0.99.17"
parking_lot = "0.12.1"
rayon = "1.6.0"
ron = "0.7.1"
serde-aux = "3.1.0"
# ts-rs = "6.1"
ts-rs = { version = "6.2.1", features = [
  "uuid-impl",
  "chrono-impl",
  "serde-compat",
] }
tonic = "0.8.2"
tonic-web = "0.4.0"
tower-service = "0.3.2"

backoff = { version = "0.4.0", features = ["futures", "tokio"] }

bson = "2.4.0"
bigdecimal = "0.3.0"
chrono = { version = "0.4.23", features = ["serde"] }
chrono-tz = "0.6.3"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
slab = "0.4.7"
typed-builder = "0.10.0"
url = "2.3.1"
uuid = "1.2.2"
validator = { version = "0.16.0", features = ["derive"] }

# Observability
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

lru = { version = "0.7.8" }
# lru = { version = "0.7.8", optional = true }
multimap = "0.8.3"

anyhow = "1.0.66"
argon2 = { version = "0.4.1", features = ["std"] }
env_logger = "0.9.3"
envy = "0.4.2"
hmac = "0.12.1"
sha2 = "0.10.2"
log = "0.4.17"
rand = "0.8.5"
secrecy = "0.8.0"
thiserror = "1.0.37"
urlencoding = "2.1.2"
lazy_static = "1.4.0"
base64 = "0.13.1"
bytes = "1.3.0"
pin-project = "1.0.12"
bevy_reflect = "0.9.1"

# geo stuff
geo = { version = "0.23.1", features = ["use-serde"] }

insta = "1.28.0"
# Maceos metapogramming lib
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0.47"
darling = "0.14.2"
convert_case = "0.5.0"
proc-macro-crate = "1.2.1"
proc-macro2-diagnostics = "0.9.1"

# [dev-dependencies]
tonic-build = "0.8.2"
strum = "0.24.1"
strum_macros = "0.24"
# You can also use the "derive" feature, and import the macros directly from "strum"
# strum = { version = "0.24", features = ["derive"] }
pretty_assertions = "1.3.0"
tokio-test = "0.4.2"
wiremock = "0.5.15"
test-case = "2.2.2"
