[workspace]

members = [
  # "app-graphql-surrealdb",
  # "app-grpc-surrealdb",
  # "lib-scripts",
  # "lib-common",
  # "lib-my-macros",
  # "lib-my-macros/derive",
  "surreal-orm",
  "surreal-query-builder",
  "surreal-derive",
  "surreal-models",
  "surreal-orm-tests",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Oyelowo Oyedayo"]
description = "One codebase to rule them all"
documentation = "https://codebreather.com/oyelowo"


[workspace.dependencies]
# lib-common = { path = "./lib-common" }
# lib-my-macros = { path = "./lib-my-macros" }
surreal-derive = { path = "./surreal-derive" }
surreal-orm = { path = "./surreal-orm" }
surreal-query-builder = { path = "./surreal-query-builder" }
surreal-models = { path = "./surreal-models" }
surreal-orm-tests = { path = "./surreal-orm-tests" }

surrealdb = { git = "https://github.com/surrealdb/surrealdb", branch = "main", features = [
  "protocol-ws",
  "protocol-http",
  "kv-mem",
  # "kv-indxdb",
  # "kv-rocksdb",
  # "kv-tikv", 
  # "kv-fdb",
  "rustls",
  "native-tls",
  "http",
  "scripting",
] }
poem = { version = "1.3.56", features = [
  "redis-session",
  "session",
  "websocket",
  "prometheus",
  "multipart",
  "cookie",
  "compression",
  "sse",
  "i18n",
  "test",
  "anyhow",
  # "eyre",
  "tokio-metrics",
  "opentelemetry",
  "opentelemetry-http",
] }
poem-openapi = { version = "2.0", features = ["swagger-ui"] }

async-graphql = { version = "5.0.10", features = [
  "apollo_tracing",
  "apollo_persisted_queries",
  "bson",
  "dataloader",
  "chrono",
  "chrono-tz",
  "log",
  "dataloader",
  "tracing",
  "opentelemetry",
  "unblock",
  "url",
  "uuid",
  "string_number",
  "secrecy",
  "decimal",
  "smol_str",
] }

async-graphql-poem = "5.0.10"
futures = "0.3.28"
futures-util = "0.3.28"
tokio = { version = "1.29.1", features = ["full"] }
redis = { version = "0.22.3", features = [
  "tokio-comp",
  "tokio-native-tls-comp",
] }
oauth2 = "4.4.1"
reqwest = { version = "0.11.18", default-features = false, features = [
  "rustls-tls",
] }
prost = "0.11.9"
hyper = "0.14.27"
http = "0.2.9"
http-body = "0.4.5"
futures-core = "0.3.28"
async-trait = "0.1.71"
config = "0.13.3"
crossbeam = "0.8.2"
derive_more = "0.99.17"
parking_lot = "0.12.1"
rayon = "1.7.0"
ron = "0.7.1"
serde-aux = "3.1.0"
# ts-rs = "6.1"
ts-rs = { version = "6.2.1", features = [
  "uuid-impl",
  "chrono-impl",
  "serde-compat",
] }
tonic = "0.8.3"
tonic-web = "0.4.0"
tower-service = "0.3.2"

backoff = { version = "0.4.0", features = ["futures", "tokio"] }

bson = "2.6.1"
bigdecimal = "0.3.1"
num-traits = "0.2.15"
chrono = { version = "0.4.26", features = ["serde"] }
chrono-tz = "0.6.3"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
slab = "0.4.8"
typed-builder = "0.10.0"
url = "2.4.0"
uuid = "1.4.0"
validator = { version = "0.16.1", features = ["derive"] }

# Observability
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

lru = { version = "0.7.8" }
# lru = { version = "0.7.8", optional = true }
multimap = "0.8.3"

anyhow = "1.0.71"
argon2 = { version = "0.4.1", features = ["std"] }
env_logger = "0.9.3"
envy = "0.4.2"
hmac = "0.12.1"
sha2 = "0.10.7"
log = "0.4.19"
rand = "0.8.5"
secrecy = "0.8.0"
thiserror = "1.0.43"
urlencoding = "2.1.2"
lazy_static = "1.4.0"
base64 = "0.13.1"
bytes = "1.4.0"
pin-project = "1.1.2"
bevy_reflect = "0.9.1"

# geo stuff
geo = { version = "0.23.1", features = ["use-serde"] }

insta = "1.30.0"
# Macros metapogramming lib
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0.64"
darling = "0.14.4"
convert_case = "0.5.0"
proc-macro-crate = "1.3.1"
proc-macro2-diagnostics = "0.9.1"

# [dev-dependencies]
tonic-build = "0.8.4"
strum = "0.24.1"
strum_macros = "0.24"
# You can also use the "derive" feature, and import the macros directly from "strum"
# strum = { version = "0.24", features = ["derive"] }
pretty_assertions = "1.4.0"
tokio-test = "0.4.2"
wiremock = "0.5.19"
test-case = "2.2.2"
