[package]
name = "rust-book"
version = "0.0.1"
description = "The Rust Book"
edition = "2018"

[workspace]


[[bin]]
name = "concat_chapters"
path = "src/bin/concat_chapters.rs"

[[bin]]
name = "convert_quotes"
path = "src/bin/convert_quotes.rs"

[[bin]]
name = "lfp"
path = "src/bin/lfp.rs"

[[bin]]
name = "link2print"
path = "src/bin/link2print.rs"

[[bin]]
name = "release_listings"
path = "src/bin/release_listings.rs"

[[bin]]
name = "remove_hidden_lines"
path = "src/bin/remove_hidden_lines.rs"

[[bin]]
name = "remove_links"
path = "src/bin/remove_links.rs"

[[bin]]
name = "remove_markup"
path = "src/bin/remove_markup.rs"

[dependencies]
walkdir = "2.3.1"
docopt = "1.1.0"
serde = "1.0"
regex = "1.3.3"
lazy_static = "1.4.0"
flate2 = "1.0.13"
tar = "0.4.26"
