[package]
name = "migration-embedded"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surreal_orm = { workspace = true }
surreal-models = { workspace = true }
tokio = { workspace = true }
surrealdb = { workspace = true }
# surreal_orm = { path = "../orm" }
