[package]
edition = "2021"
name = "backend-main-pg"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# common = {path = "../common"}
async-graphql = {version = "3.0.21", features = ["apollo_tracing", "apollo_persisted_queries", "bson", "dataloader", "chrono", "chrono-tz", "log", "dataloader", "tracing", "opentelemetry", "unblock", "url", "uuid", "string_number", "secrecy", "decimal", "smol_str",]}
# sqlx = { version = "0.5", features = [ "runtime-actix-native-tls" , "postgres"] }
# sqlx = { version = "0.5", features = [ "runtime-actix-native-tls" , "postgres",  "chrono", "offline" , "macros"] }
# sqlx = "0.5"
# async-graphql = "3.0.21"
# actix-rt = "2.4.0"
actix-rt = { version = "2.0.0", default-features = false, optional = true }
actix-web = {version = "4.0.0-beta.19", default-features = false}
async-graphql-actix-web = "3.0.21"
bson = "2.1.0"
# chrono = "0.4.19"
# chrono = {version = "0.4.19", features = ["serde"]}
chrono-tz = "0.6.1"
futures = "0.3"
mongodb = {version = "2.1.0", features = ["bson-chrono-0_4"]}
# mongodb = "2.1.0"
anyhow = "1.0.49"
envy = "0.4.2"
secrecy = "0.8.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
slab = "0.4.5"
thiserror = "1.0.30"
typed-builder = "0.9.1"
# uuid = "0.8.2"
url = "2.2.2"
urlencoding = "2.1.0"
validator = {version = "0.12", features = ["derive"]}
wither = {git = "https://github.com/thedodd/wither", branch = "master"}
# wither = "0.9.0"
simple_logger = "1"
log = "0.4"

async-trait = "0.1.52"
config = "0.11.0"
crossbeam = "0.8.1"
derive_more = "0.99.17"
parking_lot = "0.11.2"
rayon = "1.5.1"
ron = "0.7.0"
serde-aux = "3.0.1"


# [dependencies.ormx]
# ormx = "0.10.0"
# # ormx = {git = "https://github.com/NyxCode/ormx/tree/master/ormx", branch = "master" }
# features = ["postgres"]


# [dependencies.sqlx]
# version = "0.5"
# default-features = false
# features = ["macros", "postgres", "runtime-tokio-rustls", "chrono", "offline"]

ormx = { version = "0.7", features = ["postgres"]}
# [dependencies.sqlx]
# version = "0.5.10"
# default-features = false
# features = [
#     # "runtime-actix-rustls",
#     "runtime-actix-native-tls",
#     "macros",
#     "postgres",
#     "uuid",
#     "chrono",
#     "migrate",
#     "offline",
# ]


sqlx = { version = "0.5.10", features = ["runtime-tokio-native-tls", "macros", "chrono", "json", "postgres", "uuid"] }
chrono = "0.4"
dotenv = "0.15"
uuid = { version = "0.8", features = ["v4", "serde"] }