[package]
edition = "2021"
name = "backend-main-pg"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# common = {path = "../common"}
actix-rt = {version = "2.4.0", default-features = false, optional = true}
actix-web = {version = "4.0.0-rc.2", default-features = false}
async-graphql = {version = "3.0.27", features = [
  "apollo_tracing",
  "apollo_persisted_queries",
  "bson",
  "dataloader",
  "chrono",
  "chrono-tz",
  "log",
  "dataloader",
  "tracing",
  "opentelemetry",
  "unblock",
  "url",
  "uuid",
  "string_number",
  "secrecy",
  "decimal",
  "smol_str",
]}
async-graphql-actix-web = "3.0.27"
tokio = {version = "1.16.1", features = ["full"]}

bson = "2.1.0"
chrono = {version = "0.4.19", features = ["serde"]}
chrono-tz = "0.6.1"
ormx = {git = "https://github.com/NyxCode/ormx", features = ["postgres"], branch = "master"}
rand = "0.8.4"
# ormx = {version = "0.7", features = ["postgres"]}
sqlx = {version = "0.5.10", features = ["runtime-tokio-native-tls", "postgres", "chrono", "offline", "json", "macros", "uuid", "migrate"]}
uuid = {version = "0.8.2", features = ["v4", "serde"]}

anyhow = "1.0.49"
dotenv = "0.15"
envy = "0.4.2"
futures = "0.3"
log = "0.4"
secrecy = "0.8.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
simple_logger = "1"
slab = "0.4.5"
thiserror = "1.0.30"
typed-builder = "0.9.1"
url = "2.2.2"
urlencoding = "2.1.0"
validator = {version = "0.12", features = ["derive"]}

async-trait = "0.1.52"
config = "0.11.0"
crossbeam = "0.8.1"
derive_more = "0.99.17"
parking_lot = "0.11.2"
rayon = "1.5.1"
ron = "0.7.0"
serde-aux = "3.0.1"
