[package]
name = "backend-main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
async-graphql = "2.11.1"
async-graphql-actix-web = "2.11.1"
actix-web = "3.3.2"
actix-rt = "2.4.0"
futures = "0.3"
mongodb = "2.1.0"
slab = "0.4.5"
anyhow = "1.0.49"
thiserror = "1.0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typed-builder = "0.9.1"
envy = "0.4.2"
validator = { version = "0.12", features = ["derive"] }



derive_more = "0.99.17"
ron = "0.7.0"
serde-aux = "3.0.1"
parking_lot = "0.11.2"
crossbeam = "0.8.1"
rayon = "1.5.1"
config = "0.11.0"