[package]
name = "backend-second"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "helloworld-client"
path = "src/client.rs"



[dependencies]
tonic = "0.6.1"
prost = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

# async-stream = "0.3"
# futures = {version = "0.3", default-features = false, features = ["alloc"]}
# prost = "0.9"
# tokio = {version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"]}
# tokio-stream = {version = "0.1", features = ["net"]}
# tower = {version = "0.4"}
# # Required for routeguide
# rand = "0.8"
# serde = {version = "1.0", features = ["derive"]}
# serde_json = "1.0"
# # Tracing
# tracing = "0.1.16"
# tracing-attributes = "0.1"
# tracing-futures = "0.2"
# tracing-subscriber = {version = "0.2", features = ["tracing-log"]}
# # Required for wellknown types
# prost-types = "0.9"
# # Hyper example
# http = "0.2"
# http-body = "0.4.2"
# hyper = {version = "0.14", features = ["full"]}
# pin-project = "1.0"
# warp = "0.3"
# # Health example
# # Reflection example
# listenfd = "0.3"
# # grpc-web example
# bytes = "1"



[build-dependencies]
tonic-build = "0.6"
