[package]
name = "backend-second"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tonic = "0.6.1"
prost = "0.9"
# tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.49"
thiserror = "1.0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# sqlx = "0.5.10"
sqlx-cli = "0.5.10"
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "postgres" ] }
tokio = { version = "1", features = ["full"] }

# async-stream = "0.3"
# futures = {version = "0.3", default-features = false, features = ["alloc"]}
# prost = "0.9"
# tokio = {version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"]}
# tokio-stream = {version = "0.1", features = ["net"]}
# tower = {version = "0.4"}
# # Required for routeguide
# rand = "0.8"
# serde = {version = "1.0", features = ["derive"]}
# serde_json = "1.0"
# # Tracing
# tracing = "0.1.16"
# tracing-attributes = "0.1"
# tracing-futures = "0.2"
# tracing-subscriber = {version = "0.2", features = ["tracing-log"]}
# # Required for wellknown types
# prost-types = "0.9"
# # Hyper example
# http = "0.2"
# http-body = "0.4.2"
# hyper = {version = "0.14", features = ["full"]}
# pin-project = "1.0"
# warp = "0.3"
# # Health example
# # Reflection example
# listenfd = "0.3"
# # grpc-web example
# bytes = "1"



[build-dependencies]
tonic-build = "0.6"
anyhow = "1.0.49"
thiserror = "1.0.30"