[package]
author = "Oyelowo Oyedayo"
edition = "2021"
name = "common"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "1.3.32", features = [
  "redis-session",
  "session",
  "websocket",
  "prometheus",
  "multipart",
  "cookie",
  "compression",
  "sse",
  "i18n",
  "test",
  "anyhow",
  # "eyre",
  "tokio-metrics",
  "opentelemetry",
  "opentelemetry-http",
] }
sqlx = { version = "0.6.0", features = [
  "runtime-tokio-native-tls",
  "postgres",
  "chrono",
  "offline",
  "json",
  "macros",
  "uuid",
  "migrate",
] }
async-trait = "0.1.56"
anyhow = "1.0.60"
async-graphql = "4.0.4"
argon2 = { version = "0.4.0", features = ["std"] }
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = "0.6.1"
envy = "0.4.2"
futures = "0.3.21"
hmac = { version = "0.12.1", features = ["std"] }
log = "0.4.17"
rand = "0.8.5"
secrecy = "0.8.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde-aux = "3.0.1"
sha2 = "0.10.2"
thiserror = "1.0.31"
tokio = { version = "1.18.2", features = ["full"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
# Observability
tracing = "0.1.34"

redis = { version = "0.21.5", features = [
  "tokio-comp",
  "tokio-native-tls-comp",
] }

bson = "2.2.0"
mongodb = { version = "2.2.1", features = ["bson-chrono-0_4"] }
